# snow-rs

./: .gitignore  README.md  environment.yml  setup.cfg
data/modis/: README.md
src/snow_rs/data/modis/: README.md
src/snow_rs/lib/: command_line_helpers.py  dask_utils.py  modis_geotiff.py
src/snow_rs/modis/: README.md  matlab_to_geotiff.py  variable_from_modis.py
