[metadata]
name = snow-rs
version = 0.1
author = University of Utah - Snow Hydro Group
description = Snow utilities from remote sensing sources
url = https://github.com/UofU-Cryosphere/snow-rs

[options]
python_requires = >=3.7
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.data_files]
data = data/modis/WesternUS.tif

[options.entry_points]
console_scripts =
    variable_from_modis = snow_rs.modis.variable_from_modis:main
