[metadata]
name = snow_rs
version = 0.1
author = University of Utah - Snow Hydro Group
description = Snow utilities from remote sensing sources
url = https://github.com/UofU-Cryosphere/snow-rs

[options]
python_requires = >=3.7
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
snow_rs.data.modis =
    *.tif

[options.entry_points]
console_scripts =
    variable_from_modis = snow_rs.modis.variable_from_modis:main
